--- a/chat.css
+++ b/chat.css
@@ -6,11 +6,13 @@
 .chat-wrapper {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
   background: linear-gradient(
-      252.36deg,
-      #fff1e6 100%,
-      #fde2e4 100%,
-      #fff1e6 100%
+      152.36deg,
+      #fff1e6 0.79%,
+      #fde2e4 97.68%,
+      #fff1e6 97.68%
     ),
     url(ასდასდ.jpg), #003f58;
 }
@@ -29,6 +31,7 @@
   /* identical to box height */
   color: #fd6f34;
   margin-left: 20px;
+  margin-top: 61px;
 }
 .left-menu p {
   font-family: "Fira Sans";
@@ -86,4 +89,206 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+/* ///// */
+.chat-main-wrapper {
+  min-height: 100px !important;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+}
+
+.chat-container {
+  width: 80%;
+  min-width: 500px;
+  min-height: 100vh;
+  /* margin-top: 50px; */
+  background-image: url("./assets/bg-white-desktop.png");
+  border-radius: 0 19px 0px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  margin-left: 20px;
+}
+.chat {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 850px;
+  overflow-y: scroll;
+}
+.chat::-webkit-scrollbar {
+  display: none;
+}
+.chat-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 77px;
+}
+.chat-name {
+  font-family: "Gilroy GEO HEAVY";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+  color: #000000;
+  margin-top: 10px;
+}
+
+.chat-header p {
+  font-family: "Fira Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  text-transform: capitalize;
+  color: #000000;
+  margin-top: 10px;
+  width: 256px;
+}
+.input-cont {
+  width: 100%;
+  background-color: #ffff;
+  box-shadow: 0px 1px 21px #fad2e1;
+  border-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+}
+.input-cont input {
+  flex: 1;
+  height: 100%;
+  height: 75px;
+  border: 0;
+  outline: 0;
+  border-radius: 20px;
+}
+.input-text {
+  width: 60px;
+  height: 31px;
+  background: #bee1e6;
+  border-radius: 8px;
+  font-family: "Gilroy GEO HEAVY";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 15px;
+  line-height: 19px;
+  text-align: center;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.message,
+.user-message {
+  display: flex;
+  margin-top: 20px;
+}
+.user-image {
+  width: 40px;
+  height: 40px;
+}
+.message-text {
+  margin-left: 40px;
+  max-width: 70%;
+  word-break: break-all;
+  padding: 20px;
+  background: #fde2e4;
+  border-radius: 20px;
+  font-family: "Fira Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+}
+.user-message-text {
+  margin-right: 40px;
+  word-break: break-all;
+  max-width: 70%;
+  padding: 20px;
+  background: #fde2e4;
+  border-radius: 20px;
+  font-family: "Fira Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+  background: #fff1e6 !important;
+}
+.user-message {
+  margin-left: auto;
+  justify-content: right;
+  margin-top: 39px;
+  margin-bottom: 30px;
+}
+
+@media all and (max-width: 986px) {
+  .left-menu {
+    display: none;
+  }
+  .chat-container {
+    width: 100%;
+    margin: 0;
+  }
+}
+@media all and (max-width: 1536px) {
+  .left-menu {
+    width: 550px;
+    min-height: 100vh;
+    background-color: #e2ece9;
+  }
+
+  .left-menu h1 {
+    font-family: "Gilroy GEO HEAVY";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 100px;
+    line-height: 137px;
+    /* identical to box height */
+    color: #fd6f34;
+    margin-left: 20px;
+    margin-top: 41px;
+  }
+  .left-menu p {
+    font-family: "Fira Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 35px;
+  }
+  .header {
+    font-size: 17px;
+    line-height: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  .menu-list {
+    width: 416px;
+    margin-left: 20px;
+    justify-content: center;
+  }
+  .menu-list li {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 10px 0;
+  }
+  .menu-list li p {
+    font-size: 15px;
+    line-height: 20px;
+  }
+  .icon-cont {
+    width: 41px;
+    height: 45px;
+  }
+  .icon-cont img {
+    height: 20px;
+  }
 }
