--- a/style.css
+++ b/style.css
@@ -68,8 +68,25 @@ body {
   color: #ffffff;
   cursor: pointer;
 }
+.hello-content button a {
+  color: #ffffff;
+  cursor: pointer;
+  text-decoration: none;
+}
 
-@media all and (max-width: 768px) {
+@media all and (max-width: 552px) {
+  body {
+    background-image: url("./assets/bg-mobile.png");
+    background-position: center;
+  }
+  .hello-container {
+    align-items: flex-start;
+  }
+  .hello-content {
+    margin-top: 120px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
   .hello-container {
     background-image: none;
     background-color: transparent;
@@ -77,7 +94,7 @@ body {
   .hello-content button {
     width: 216px;
     height: 86px;
-    font-family: "FiraGO";
+    font-family: "Fira Sans";
     font-style: normal;
     font-weight: 800;
     font-size: 40px;
@@ -87,7 +104,7 @@ body {
     color: #ffffff;
   }
   .hello-content h1 {
-    font-family: "FiraGO";
+    font-family: "Fira Sans";
     font-style: normal;
     font-weight: 800;
     font-size: 32px;
@@ -97,7 +114,7 @@ body {
     color: #ffffff;
   }
   .hello-content p {
-    font-family: "FiraGO";
+    font-family: "Fira Sans";
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
@@ -106,6 +123,7 @@ body {
     text-transform: uppercase;
     color: #ffffff;
     margin: 30px 0;
+    width: 282px;
   }
   .hello-container {
     width: 100% !important;
@@ -116,20 +134,5 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-}
-
-@media all and (max-width: 475px) {
-  body {
-    background-image: url("./assets/bg-mobile.png");
-    background-position: center;
-  }
-  .hello-container {
-    align-items: flex-start;
-  }
-  .hello-content {
-    margin-top: 70px;
-    margin-left: 10px;
-    margin-right: 10px;
   }
 }
