--- a/chat.css
+++ b/chat.css
@@ -450,3 +450,17 @@ body {
     margin-right: 10px;
   }
 }
+@media all and (max-width: 1440px) {
+  .left-menu h1 {
+    margin-top: 20px;
+    font-size: 70px;
+    line-height: 1.3;
+  }
+  .left-menu p {
+    font-size: 30px;
+    padding-right: 40px;
+  }
+  .header {
+    margin-top: 15px;
+  }
+}
